--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,4 @@
-body {
-    background: #333;
-    color: #bbb;
-}
+body #lorem {
+  display: block; }
+
+/*# sourceMappingURL=maps/style.css.map */
