--- a/src/scss/blocks/_body.scss
+++ b/src/scss/blocks/_body.scss
@@ -1,4 +1,6 @@
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
 body {
-    background: #333;
-    color: #bbb;  
+    background: linear-gradient(to right, #25c481, #25b7c4);
+    color: #fff; 
+    font-family: 'Roboto', sans-serif; 
 }
