--- a/src/scss/blocks/_tables.scss
+++ b/src/scss/blocks/_tables.scss
@@ -1,14 +1,29 @@
+$margin: 25px;
+$shadow: 0 0 35px #777;
+$align: center;
 .b_table {
-    margin: 50px auto;
+    margin: $margin;
+    @if ($align=='center') {
+        margin: $margin auto;
+    }
     border-spacing: 0px;
     border: 15px solid #fff;
-    box-shadow: 0 0 35px #777;
+    box-shadow: $shadow;
+}
+
+.b_table__h2 {
+    margin: $margin;
+    text: {
+        transform: uppercase;
+        shadow: $shadow;
+        align: $align;
+    }
 }
 
 .b_table__td {
     border-top: 1px solid #fff;
-    padding: 25px;
-    text-align: center;
+    padding: $margin;
+    text-align: $align;
     &:nth-of-type(1) {
         text-align: left;
         font-weight: bold;
